--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,37 @@
-baseURL = 'http://codi.blog/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseurl = "https://codi.blog"
+languageCode = "en-us"
+title = "Codi's Blog"
+theme = "codi-ng"
+paginate = 2
+Copyright = "© Codi Huston 2023"
+canonifyurls = true
+
+[params]
+description = "Welcome to my blog, where I discuss all things code, devlops, and tech."
+authorlocation = "Kentucky, USA"
+cover = "images/cover.png"
+## save the image you want to use as background picture in directory "./static/images"author = "author name"(delete this line when editing)
+logo = "images/logo.png"
+## save the image you want to use as website logo in directory "./static/images"(delete this line when editing)
+githubName = "codihuston"
+linkedinName = "codi-huston"
+email = "codi.huston@gmail.com"
+instagramName = "codihuston"
+hideHUGOSupport = false
+
+[menu]
+  [[menu.main]]
+    name = "Home"
+    pre = "home"
+    url = "/"
+    weight = 1
+  [[menu.main]]
+    name = "Posts"
+    pre = "pen-tool"
+    url = "/posts/"
+    weight = 2
+  [[menu.main]]
+    name = "Tags"
+    pre = "tag"
+    url = "/tags/"
+    weight = 3
