--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Codi's Blog"
 theme = "codi-ng"
 paginate = 2
-Copyright = "© Codi Huston 2023"
+Copyright = "© Codi Huston"
 canonifyurls = true
 
 [params]
