--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://codi.blog"
+baseurl = "https://www.codihuston.com/"
 languageCode = "en-us"
 title = "Codi's Blog"
 theme = "codi-ng"
