Add image partial / shortcode
- Shortcode cannot be used in layout templates, thus to recycle a shortcode across templates and posts (markdown), you must put the shortcode in a partial and wrap it with a shortcode. Then you call the shortcode in markdown, or the partial in the template
- Specify width OR height to scale and maintain aspect ratio
- Can specify classes, such as `img-fluid` to make image responsive (bootstrap)
- This partial / shortcode will keep payloads smaller than the source image

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -5,6 +5,7 @@ theme = "codi-ng"
 paginate = 2
 Copyright = "© Codi Huston"
 canonifyurls = true
+assetDir = "static"
 
 [params]
 description = "Welcome to my blog, where I discuss all things code, devlops, and tech."
