--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -31,6 +31,7 @@ assetDir = "static"
   linkedinName = "codi-huston"
   email = "codi.huston@gmail.com"
   instagramName = "codihuston"
+  paypal = "https://paypal.me/codihuston"
   hideHUGOSupport = false
 
 [menu]
