--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -41,18 +41,23 @@ assetDir = "static"
     url = "/"
     weight = 1
   [[menu.main]]
+    name = "About"
+    pre = "address-card"
+    url = "/about/"
+    weight = 2
+  [[menu.main]]
     name = "Posts"
     pre = "newspaper"
     url = "/posts/"
-    weight = 2
+    weight = 3
   [[menu.main]]
     name = "Tags"
     pre = "tags"
     url = "/tags/"
-    weight = 3
+    weight = 4
   [[menu.main]]
     name = "Categories"
     pre = "layer-group"
     url = "/categories/"
-    weight = 4
+    weight = 5
 
